# policyai

./: .gitignore  Cargo.toml  Hypermakefile  Makefile  README.md  ai-tweets
.github/workflows/: rust.yml
data/: policy
examples/: extract-tweets.rs  generate-actions.rs  generate-decidables.rs  generate-semantic-injections.rs  generate-test-data.rs
prompts/: generate-semantic-injection.md  manager.md  manager_naive.md  manager_suffix.md
src/: analysis.rs  data.rs  errors.rs  field.rs  lib.rs  manager.rs  masking.rs  masks.rs  on_conflict.rs  parser.rs  policy.rs  policy_type.rs  report.rs  report_builder.rs  usage.rs
tests/: regressions.jsonl
