[package]
name = "policyai"
version = "0.4.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "PolicyAI provides a mechanism for unstructured, composable policies that transform unstructured text into structured outputs."
license = "Apache-2.0"
repository = "https://github.com/rescrv/policyai"

[dependencies]
arrrg = "0.6.0"
arrrg_derive = "0.6.0"
claudius = "0.16.0"
getopts = "0.2.21"
guacamole = "0.10.0"
rand = "0.9.0"
reqwest = "0.12.12"
rustyline = { version = "15.0.0", features = ["derive"] }
serde = "1.0.217"
serde_json = { version = "1.0.135", features = ["preserve_order"] }
shvar = "0.6.0"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
utf8path = "0.9.1"
uuid = { version = "1.18.1", features = ["v4"] }
